# course_web

./: .env.sample  README.md  contacts_json.json  data.json  pyproject.toml
blog/: admin.py  models.py  services.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing/: admin.py  apps.py  constants.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: check_sending.py  fill.py
mailing/migrations/: 0001_initial.py  0002_alter_clients_contact_mail.py  0002_clients_user_logs_user_mailing_user_message_user.py  0003_alter_logs_options_and_more.py  0003_message.py  0004_alter_clients_comment.py  0005_mailing_logs.py
mailing/templates/mailing/: base_page.html  client.html  clients_confirm_delete.html  clients_form.html  home.html  logs_list.html  mailing.html  mailing_confirm_delete.html  mailing_form.html  mailing_list.html  message.html  message_confirm_delete.html  message_form.html  message_list.html  start_page.html
mailing/templates/mailing/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: confirm_email.html  invalid_verify.html  login.html  register.html  user_form.html  user_list.html
