[tool.poetry]
name = "course-web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "course_web"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.1"
pylist = "^1.4.0"
psycopg2-binary = "^2.9.7"
django = "^4.2.5"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
